opp_test moved to src/utils

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -1,5 +1,4 @@
 
-PERL=perl
 TESTFILES=*.test
 TFLAGS=-v
 
@@ -7,9 +6,9 @@ all: test
 
 test:
 	if ! [ -d work ];  then mkdir work; fi
-	$(PERL) opp_test.pl -g $(TFLAGS) $(TESTFILES)
+	opp_test -g $(TFLAGS) $(TESTFILES)
 	cd work; opp_makemake -f -u cmdenv; make
-	$(PERL) opp_test.pl -r $(TFLAGS) $(TESTFILES)
+	opp_test -r $(TFLAGS) $(TESTFILES)
 
 clean:
 	rm -rf work
