OMNETPP_TEST_DIR; renamed 'test' target to 'tests' (conflicted with test/ directory, and not all make progs know .PHONY)

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,7 +125,7 @@ docs:
 #
 # Test
 #
-test:
+tests: libs progs
 	cd $(OMNETPP_TEST_DIR) && $(MAKE)
 
 #=====================================================================
