--- a/configure.in
+++ b/configure.in
@@ -480,7 +480,7 @@ AC_SUBST(OMNETPP_SRC_DIR)
 AC_SUBST(OMNETPP_DOC_DIR)
 AC_SUBST(OMNETPP_SAMPLES_DIR)
 AC_SUBST(OMNETPP_TUTORIAL_DIR)
-dnl AC_SUBST(OMNETPP_TEST_DIR)
+AC_SUBST(OMNETPP_TEST_DIR)
 dnl AC_SUBST(OMNETPP_MODELS_DIR)
 
 AC_SUBST(YACC)
