--- a/samples/fddi/Makefile.in
+++ b/samples/fddi/Makefile.in
@@ -40,6 +40,7 @@ MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
+NEDCFLAGS=@NEDCFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
@@ -64,8 +65,7 @@ PVM_KERNEL_LIBS=-lsim_pvm $(PVM_LIBS)
 OMNETPP_LIBS=-L$(OMNETPP_LIB_DIR) $(USERIF_LIBS) $(KERNEL_LIBS) $(SYS_LIBS)
 
 COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
-NEDCFLAGS=-gstabs+3 -pipe -fpermissive -Wall -Wno-unused
-NEDCOPTS=$(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
+NEDCOPTS=$(CFLAGS) $(NEDCFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 
 #------------------------------------------------------------------------------
 
