--- a/configure.in
+++ b/configure.in
@@ -137,7 +137,7 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 
 # doxygen is used for generation of api doc
-AC_ARG_VAR(DOXYGEN, The doxygen documentation tool)
+AC_ARG_VAR(DOXYGEN, The Doxygen documentation tool)
 AC_PATH_PROG(DOXYGEN, doxygen, doxygen)
 
 # perl is needed for experimental nedc message subclassing (see feature nedc-subcl)
@@ -577,14 +577,26 @@ else
   if ($probefile) >/dev/null 2>/dev/null; then
     echo "Your PATH contains $OMNETPP_BIN_DIR. Good!"
   else
-    cat 1>&2 << EOT
+    if test "$cygwin" = yes; then
+      opp_bin_dir=`cygpath -u $OMNETPP_BIN_DIR`
+      if test -z "$opp_bin_dir"; then opp_bin_dir=$OMNETPP_BIN_DIR; fi
+      cat 1>&2 << EOT
 
-Warning: your PATH doesn't contain $OMNETPP_BIN_DIR!
+WARNING: your PATH doesn't contain $opp_bin_dir!
+Add the following line to your startup file, $HOME/.bash_profile:
+  export PATH=\$PATH:$opp_bin_dir
+
+EOT
+    else
+      cat 1>&2 << EOT
+
+WARNING: your PATH doesn't contain $OMNETPP_BIN_DIR!
 Add the following line to your startup file:
   export PATH=\$PATH:$OMNETPP_BIN_DIR  # .(bash_)profile if you use sh/bash
   setenv PATH \$PATH:$OMNETPP_BIN_DIR  # .cshrc if you use csh,tcsh etc.
 
 EOT
+    fi
   fi
   rm $omnetpp_bin_dir/$probefile
 fi
@@ -600,7 +612,7 @@ if test "$build_shared_libs" = yes -a "$cygwin" != yes; then
   else
     cat 1>&2 << EOT
 
-Warning: You selected shared libraries in configure.user, but your
+WARNING: You selected shared libraries in configure.user, but your
 LD_LIBRARY_PATH doesn't seem to contain $OMNETPP_LIB_DIR!
 
 So that the dynamic linker can find the OMNeT++ shared libs, you either have
