--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -10,6 +10,7 @@ MAKEDEPEND=@MAKEDEPEND@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+EXPAT_LIB=@EXPAT_LIB@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -28,7 +29,7 @@ all: nedc nedtool
 
 
 nedtool: main.o
-	$(CXX) $(LDFLAGS) -o nedtool main.o -L$(OMNETPP_LIB_DIR) -lnedxml -lexpat
+	$(CXX) $(LDFLAGS) -o nedtool main.o -L$(OMNETPP_LIB_DIR) -lnedxml $(EXPAT_LIB)
 	../utils/install-prog nedtool $(OMNETPP_BIN_DIR)
 
 nedc: $(OBJS)
