--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -17,9 +17,10 @@ all: seedtool tcl2c
 	cp opp_makemake $(OMNETPP_BIN_DIR)
 	cp opp_test $(OMNETPP_BIN_DIR)
 	cp opp_makedep $(OMNETPP_BIN_DIR)
+	cp opp_neddoc $(OMNETPP_BIN_DIR)
 	cp splitvec $(OMNETPP_BIN_DIR)
 	../utils/install-prog seedtool $(OMNETPP_BIN_DIR)
-	cd $(OMNETPP_BIN_DIR); ln -sf opp_makemake makemake
+	cd $(OMNETPP_BIN_DIR); rm -f makemake; ln -sf opp_makemake makemake
 
 seedtool : seedtool.cc
 	$(CXX) seedtool.cc -o seedtool
