target htmldocs: don't generate latex output

--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -438,6 +438,7 @@ htmldocs:
 	s/^EXCLUDE_PATTERNS *=.*/EXCLUDE_PATTERNS = *_n.cc *_n.h/;\\
 	s/^ALPHABETICAL_INDEX *=.*/ALPHABETICAL_INDEX = yes/;\\
 	s/^HTML_OUTPUT *=.*/HTML_OUTPUT = htmldoc/;\\
+	s/^GENERATE_LATEX *=.*/GENERATE_LATEX = no/;\\
 	s/^GENERATE_TREEVIEW *=.*/GENERATE_TREEVIEW = yes/;\\
 	s/^HIDE_UNDOC_RELATIONS *=.*/HIDE_UNDOC_RELATIONS = no/;\\
 	s|^TAGFILES *=.*|TAGFILES = @OMNETPP_DOC_DIR@/api/tags|;\\
